# REG-Linux

./: .editorconfig  .gitignore  .gitmodules  ARCHITECTURE.md  CHANGES.md  Config.in  Dockerfile  Makefile  Makefile.jenkins  README.md  batocera-Changelog.md  external.desc  external.mk  getPoFromWebsite.sh  reglinux-Changelog.md  reglinux.mk.template
board/: README.md  users.txt
configs/: batocera-cha.board  (+98 more)
package/system/reglinux-configgen/configgen/: pyproject.toml  setup.py
package/system/reglinux-configgen/configgen/configgen/: Command.py  Emulator.py  Evmapy.py  GeneratorImporter.py  README.md  __init__.py  command.py  controllersConfig.py  emulator.py  emulatorlauncher.py  generator_importer.py  systemFiles.py
package/system/reglinux-configgen/configgen/configgen/bezel/: __init__.py  bezel_base.py  bezel_common.py  libretro_bezel_manager.py  mame_bezel_manager.py
package/system/reglinux-configgen/configgen/configgen/client/: __init__.py  regmsgclient.py
package/system/reglinux-configgen/configgen/configgen/controllers/: __init__.py  controller.py  controllerdb.py  devices.py  evmapy.py  guns.py  metadata.py  mouse.py  utils.py
package/system/reglinux-configgen/configgen/configgen/generators/: Generator.py  generator.py
package/system/reglinux-configgen/configgen/configgen/generators/abuse/: __init__.py  abuseConfig.py  abuseGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/amiberry/: __init__.py  amiberryConfig.py  amiberryGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/applewin/: __init__.py  applewinConfig.py  applewinGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/azahar/: __init__.py  azaharConfig.py  azaharControllers.py  azaharGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/bigpemu/: __init__.py  bigpemuConfig.py  bigpemuControllers.py  bigpemuGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/cannonball/: __init__.py  cannonballConfig.py  cannonballGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/cdogs/: __init__.py  cdogsConfig.py  cdogsGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/cemu/: __init__.py  cemuConfig.py  cemuControllers.py  cemuGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/cgenius/: __init__.py  cgeniusConfig.py  cgeniusControllers.py  cgeniusGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/citron/: citronGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/corsixth/: __init__.py  corsixthConfig.py  corsixthGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/demul/: demulGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/devilutionx/: __init__.py  devilutionxConfig.py  devilutionxGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/dhewm3/: __init__.py  dhewm3Config.py  dhewm3Generator.py
package/system/reglinux-configgen/configgen/configgen/generators/dolphin/: __init__.py  dolphinConfig.py  dolphinControllers.py  dolphinControllers.py.backup  dolphinGenerator.py  gamecubeControllers.py  wiiControllers.py
package/system/reglinux-configgen/configgen/configgen/generators/dolphin_triforce/: __init__.py  dolphinTriforceConfig.py  dolphinTriforceControllers.py  dolphinTriforceGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/dosboxstaging/: __init__.py  dosboxstagingConfig.py  dosboxstagingGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/dosboxx/: __init__.py  dosboxxConfig.py  dosboxxGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/drastic/: __init__.py  drasticConfig.py  drasticControllers.py  drasticGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/duckstation/: __init__.py  duckstationConfig.py  duckstationControllers.py  duckstationGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/duckstation_legacy/: duckstationLegacyGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/dxx_rebirth/: __init__.py  dxx_rebirthConfig.py  dxx_rebirthGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/easyrpg/: __init__.py  easyrpgConfig.py  easyrpgGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/ecwolf/: __init__.py  ecwolfConfig.py  ecwolfGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/eden/: __init__.py  edenConfig.py  edenController.py  edenGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/eduke32/: __init__.py  eduke32Generator.py
package/system/reglinux-configgen/configgen/configgen/generators/etekwar/: etekwarGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/etlegacy/: __init__.py  etlegacyGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/fallout1/: __init__.py  fallout1Config.py  fallout1Generator.py
package/system/reglinux-configgen/configgen/configgen/generators/fallout2/: __init__.py  fallout2Config.py  fallout2Generator.py
package/system/reglinux-configgen/configgen/configgen/generators/flatpak/: flatpakGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/flycast/: __init__.py  flycastConfig.py  flycastControllers.py  flycastGenerator.py
package/system/reglinux-configgen/configgen/configgen/generators/gsplus/: __init__.py  gsplusConfig.py  gsplusGenerator.py
package/system/reglinux-configgen/configgen/configgen/settings/: README.md  __init__.py  json_settings.py  toml_settings.py  unixSettings.py  unix_settings.py
package/system/reglinux-configgen/configgen/configgen/utils/: batoceraServices.py  bezels.py  buildargs.py  gunsUtils.py  logger.py  regmsgclient.py  squashfs.py  systemServices.py  videoMode.py  wheelsUtils.py  windowsManager.py  windows_manager.py  zar.py
(+5972 files in other folders)
